--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,72 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+  --color-primary-50: #d3f7fa;
+  --color-primary-100: #a7f0f4;
+  --color-primary-200: #4fe1ea;
+  --color-primary-300: #17b5be;
+  --color-primary-400: #0c6166;
+  --color-primary-500: #07373a;
+  --color-primary-600: #05292c;
+  --color-primary-700: #031b1d;
+  --color-primary-800: #020e0f;
+  --color-primary-900: #010707;
+  --color-secondary-50: #fdfae8;
+  --color-secondary-100: #f9efb9;
+  --color-secondary-200: #f5e48b;
+  --color-secondary-300: #f3df73;
+  --color-secondary-400: #efd445;
+  --color-secondary-500: #ebc916;
+  --color-secondary-600: #c5a811;
+  --color-secondary-700: #76650a;
+  --color-secondary-800: #4f4307;
+  --color-secondary-900: #272203;
+  --color-neutral-50: #f9fafb;
+  --color-neutral-100: #f2f4f7;
+  --color-neutral-200: #eaecf0;
+  --color-neutral-300: #d0d5dd;
+  --color-neutral-400: #98a2b3;
+  --color-neutral-500: #667085;
+  --color-neutral-600: #475467;
+  --color-neutral-700: #344054;
+  --color-neutral-800: #1d2939;
+  --color-neutral-900: #101828;
+  --color-success-50: #ecfdf3;
+  --color-success-100: #d1fadf;
+  --color-success-200: #a6f4c5;
+  --color-success-300: #6ce9a6;
+  --color-success-400: #32d583;
+  --color-success-500: #12b76a;
+  --color-success-600: #039855;
+  --color-success-700: #027948;
+  --color-success-800: #05603a;
+  --color-success-900: #054f31;
+  --color-warning-50: #fffbeb;
+  --color-warning-100: #fef3c7;
+  --color-warning-200: #fde68a;
+  --color-warning-300: #fcd34d;
+  --color-warning-400: #fbbf24;
+  --color-warning-500: #f59e0b;
+  --color-warning-600: #d97706;
+  --color-warning-700: #b45309;
+  --color-warning-800: #92400e;
+  --color-warning-900: #78350f;
+  --color-error-50: #fef2f2;
+  --color-error-100: #fee2e2;
+  --color-error-200: #fecaca;
+  --color-error-300: #fca5a5;
+  --color-error-400: #f87171;
+  --color-error-500: #ef4444;
+  --color-error-600: #dc2626;
+  --color-error-700: #b91c1c;
+  --color-error-800: #991b1b;
+  --color-error-900: #7f1d1d;
+}
+.stroke-gradient {
+  background: linear-gradient(to right, #eec800 0%, #b1f8b1 100%);
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+/* Header styles */
+.menu-active {
+  overflow: hidden;
 }
